tests/base/invalid/Byte_Invalid_1.whiley
import whiley.lang.*:*

void ::main(System sys,[string] args):
    b = 01b
    i = b * 2
    sys.out.println(str(i))
